src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
/* @font-face {
  font-family: "Tanker-Regular";
  src: url("/fonts/tanker/Tanker-Regular.ttf") format("truetype");
  font-weight: 400;
  font-display: swap;
  font-style: normal;
} */

html,
body,
:root {
  height: 100%;
}

/* body {
  scrollbar-gutter: auto;
} */

@layer base {
  :root {
    --sal-yellow: 60 90% 75%; /* #f8f16b */
    --sal-pink: 303 100% 82%; /* #ff7bff #f4a9f6 */
    --sal-pink-hex: #f4a9f6;
    --sal-green: 83, 51%, 88%; /* #e4f0d1 */
    --sal-test: rgb(228, 240, 209);
    --sal-yellow-hex: #f8f16b;
    --background: 0 0% 100%;
    --user-icon: var(--sal-yellow);
    --foreground: 222.2 84% 4.9%;
    --sal-progress: rgb(255, 247, 100);
    --card: 0 0% 100%;
    --menu-background: var(--sal-yellow-hex);

    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;

    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;

    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;

    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;

    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;

    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;

    --destructive-foreground: 210 40% 98%;

    --border: #171716;

    --input: 214.3 31.8% 91.4%;

    --ring: 222.2 84% 4.9%;

    --chart-1: 12 76% 61%;

    --chart-2: 173 58% 39%;

    --chart-3: 197 37% 24%;

    --chart-4: 43 74% 66%;

    --chart-5: 27 87% 67%;

    --radius: 0.5rem;

    --sidebar-background: 0 0% 98%;

    --sidebar-foreground: 240 5.3% 26.1%;

    --sidebar-primary: 240 5.9% 10%;

    --sidebar-primary-foreground: 0 0% 98%;

    --sidebar-accent: 240 4.8% 95.9%;

    --sidebar-accent-foreground: 240 5.9% 10%;

    --sidebar-border: 220 13% 91%;

    --sidebar-ring: 217.2 91.2% 59.8%;
  }
  .dark {
    --background: 222.2 84% 4.9%;

    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;

    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;

    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;

    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;

    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;

    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;

    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;

    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;

    --input: 217.2 32.6% 17.5%;

    --ring: 212.7 26.8% 83.9%;

    --chart-1: 220 70% 50%;

    --chart-2: 160 60% 45%;

    --chart-3: 30 80% 55%;

    --chart-4: 280 65% 60%;

    --chart-5: 340 75% 55%;

    --sidebar-background: 240 5.9% 10%;

    --sidebar-foreground: 240 4.8% 95.9%;

    --sidebar-primary: 224.3 76.3% 48%;

    --sidebar-primary-foreground: 0 0% 100%;

    --sidebar-accent: 240 3.7% 15.9%;

    --sidebar-accent-foreground: 240 4.8% 95.9%;

    --sidebar-border: 240 3.7% 15.9%;

    --sidebar-ring: 217.2 91.2% 59.8%;
  }
  .default {
    --background: 60 90% 75%; /* #f8f16b */
    --sal-progress: var(rgb(240, 121, 244));
    --user-icon: 0, 0%, 100%;
    --menu-background: white;

    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;

    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;

    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;

    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;

    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;

    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;

    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;

    --destructive-foreground: 210 40% 98%;

    --border: #171716;

    --input: 214.3 31.8% 91.4%;

    --ring: 222.2 84% 4.9%;

    --chart-1: 12 76% 61%;

    --chart-2: 173 58% 39%;

    --chart-3: 197 37% 24%;

    --chart-4: 43 74% 66%;

    --chart-5: 27 87% 67%;

    --radius: 0.5rem;
  }
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

/* ----------- Components ------------ */

.search {
  & .scrollbar::-webkit-scrollbar {
    width: 2px;
  }
  &.scrollbar::-webkit-scrollbar-track {
    border-radius: 100vh;
    background: #f7f4ed;
  }

  &.scrollbar::-webkit-scrollbar-thumb {
    background: #e6dcd5;
    border-radius: 100vh;
    /*  border: 3px solid #f6f7ed;  */
  }

  &.scrollbar::-webkit-scrollbar-thumb:hover {
    background: #e0cbcb;
  }
}

.no-scroll {
  overflow: hidden !important;
}

.scrollable {
  overflow: auto;
  scrollbar-gutter: auto;
  /* &.boundless {
    height: 100vh;
  } */
}

/* For WebKit-based browsers (Chrome, Safari, Edge) */
.scrollable::-webkit-scrollbar {
  width: 1em;
  height: 2px; /* if you also want horizontal scrollbars */
}

.scrollable::-webkit-scrollbar-track {
  background: var(--background);
}

.scrollable::-webkit-scrollbar-thumb {
  background-color: var(--background);
  border-radius: 9999px; /* fully rounded */
  border: 1px solid black;
  transition: transform 0.2s ease, background-color 0.2s ease;
}

.scrollable::-webkit-scrollbar-thumb:hover {
  transform: scaleX(2); /* doubles the width from 2px to ~4px */
}
.scrollable.mini::-webkit-scrollbar {
  width: 4px;
}
.scrollable.mini.darkbar::-webkit-scrollbar-thumb {
  background: hsl(var(--primary) / 0.65);
}

.scrollable.mini::-webkit-scrollbar-thumb {
  /* background: rgb(224, 220, 217); */
  background: hsl(var(--primary) / 0.15);
  border: none;
}
.scrollable.invis {
  scrollbar-gutter: unset;
  overflow: auto;
}

.scrollable.invis::-webkit-scrollbar {
  display: none;
  width: 0;
}

.scrollable.invis {
  -ms-overflow-style: none;
}

@-moz-document url-prefix() {
  .scrollable {
    scrollbar-width: thin;
    scrollbar-color: var(--background) rgb(255, 252, 199);
  }
}

.accordion-cont {
  &:not(:last-of-type) {
    padding-bottom: 10px;
  }
  &:not(:first-of-type) {
    padding-top: 10px;
  }
}

.price-card-cont {
  &:not(:last-of-type) {
    margin-bottom: 5em;
  }
}

.scrollbar-hide {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.scrollbar-hide::-webkit-scrollbar {
  display: none; /* Chrome, Safari, Opera */
}

:focus-visible {
  outline: 2px solid var(--sal-pink-hex);
  outline-offset: 2px;
}

:focus,
:focus-within,
:active {
  &:not(button) {
    box-shadow: none;
  }
  outline: none;
  /* border: 2px solid black ; */
}
form {
  input:focus,
  textarea:focus {
    outline: 1px solid black;
    outline-offset: 0;
  }
  input:not(:placeholder-shown):valid {
    background-color: rgb(255, 255, 255);
  }
}
text-area::placeholder,
input::placeholder {
  color: foreground;
}

input::-webkit-autofill,
input::-webkit-autofill:hover,
input::-webkit-autofill:focus,
input::-webkit-autofill:active {
  background-color: white;
  color: black;
  box-shadow: 0 0 0px 1000px white inset;
}

input:-webkit-autofill,
textarea:-webkit-autofill,
select:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px white inset;
  -webkit-text-fill-color: black;
  caret-color: black; /* note-to-self: cursor styling*/

  &.sal {
    -webkit-box-shadow: 0 0 0 30px var(--sal-yellow-hex) inset;
  }
  font-weight: 400;
  font-style: italic;
}

input::-moz-focus-inner {
  border: 0;
}

input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

input:not(:placeholder-shown):not(:valid):not(:read-only) {
  box-shadow: 0 0 0 4px rgba(255, 0, 0, 0.2); /* outer offset outline */
}

::selection {
  background: var(--sal-pink-hex); /* Yellow highlight */
  color: black;
}

button,
img,
svg,
a {
  user-select: none;
}
/* *:not(p, h1, h2, h3) {
  user-select: none;
} */

button:focus-visible,
button:focus-within,
button:active {
  outline: var(--sal-pink) solid 2px;
}
/* 
:focus-visible {
  &:not(button) {
    outline: rgba(0, 0, 0, 0.2) solid 2px;
  }

  border-radius: 5px;
} */

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.stroked {
  -webkit-text-stroke: 0.5px black;
  &.wshadow {
    text-shadow: black -5px 5px;
  }
}

.unstroked {
  -webkit-text-stroke: 0;
}

@-moz-document url-prefix() {
  .stroked {
    /* -moz-text-stroke: 2px black; */
    -webkit-text-stroke: 2px black;
    /* text-shadow: none!important; */
  }
}

